Added python-tk, python3-tk & simplemenu

--- a/debian/control
+++ b/debian/control
@@ -116,12 +116,15 @@ Recommends: about-distro,
             print-manager,
             pulseaudio,
             python-appindicator,
+            python-tk,
+            python3-tk,
             qapt-deb-installer,
             qtcore4-l10n,
             qtcurve-i18n,
             rar,
             rootactions-servicemenu,
             samba-mounter,
+            simplemenu,
             sddm-theme-maui,
             skanlite,
             skype,
