--- a/debian/control
+++ b/debian/control
@@ -21,6 +21,7 @@ Recommends: about-distro,
             burgerspace,
             command-not-found,
             dolphin,
+            desktop-file-utils,
             ffmpegthumbnailer,
             firefox-plasma,
             firmware-linux-nonfree,
