Remove gparted Add partitionmanager (KDE Partitionmanager) Add kubuntu-driver-manager

--- a/debian/control
+++ b/debian/control
@@ -32,7 +32,6 @@ Recommends: about-distro,
             gltron,
             gmusicbrowser,
             gnome-chess,
-            gparted,
             gstreamer0.10-fluendo-mp3,
             gstreamer1.0-plugins-bad,
             gstreamer1.0-plugins-ugly,
@@ -78,6 +77,7 @@ Recommends: about-distro,
             ksuperkey,
             ksysguard,
             ktron,
+            kubuntu-driver-manager,
             kwin-addons,
             kwin-decoration-oxygen,
             kwrited,
@@ -99,6 +99,7 @@ Recommends: about-distro,
             okular-extra-backends,
             openjdk-8-jre,
             p7zip-full,
+            partitionmanager,
             pavucontrol,
             phonon-backend-gstreamer,
             phonon4qt5-backend-gstreamer,
