Replace vlc with smplayer

--- a/debian/control
+++ b/debian/control
@@ -127,6 +127,7 @@ Recommends: about-distro,
             sddm-theme-maui,
             skanlite,
             skype,
+            smplayer,
             sni-qt,
             sni-qt:i386,
             steam,
@@ -138,7 +139,6 @@ Recommends: about-distro,
             user-manager,
             virtualbox,
             virtualbox-guest-dkms,
-            vlc,
             vokoscreen,
             xdg-user-dirs,
             yakuake
